--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Welcome to My Webpage</h1>
+<h2>WELCOME</h2>
   <p>This is a paragraph of text to introduce the page.</p>
   <img src="https://via.placeholder.com/150" alt="Sample Image">
   <p>Visit <a href="https://www.example.com">Example.com</a> for more info.</p>
